--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .partly-cloudy-day {
     content: url(./assets/partly-cloudy-day.svg);  
 }
@@ -41,3 +52,40 @@ img {
 .small {
     width: 25px;
 }
+
+#selectedWeather {
+    display: flex;
+    align-items: center;
+    gap: 60px;
+    padding-bottom: 30px;
+    padding-top: 30px;
+}
+
+#selectedWeather div:first-child{
+    display: flex;
+}
+
+#unitGroup{
+    display: flex;
+    padding-right: 10px;
+}
+
+#weatherForecast {
+    display: flex;
+    gap: 10px;
+}
+
+h1 {
+    align-self: center;
+}
+
+.card {
+    min-width: 40px;
+}
+
+
+form {
+    display: flex;
+    padding-top: 25px;
+}
+
