--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #1f1f1f;
+    color: #f0f0f0;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
 .partly-cloudy-day {
@@ -47,6 +50,7 @@ body {
 
 img {
     width: 50px;
+    filter: invert(89%) sepia(14%) saturate(720%) hue-rotate(194deg) brightness(110%) contrast(86%);
 }
 
 .small {
@@ -58,7 +62,6 @@ img {
     align-items: center;
     gap: 60px;
     padding-bottom: 30px;
-    padding-top: 30px;
 }
 
 #selectedWeather div:first-child{
@@ -68,11 +71,21 @@ img {
 #unitGroup{
     display: flex;
     padding-right: 10px;
+    color: #b1b1b1;
+}
+
+#unitGroup:hover {
+    cursor: pointer;
+}
+
+.card:hover {
+    cursor: pointer;
 }
 
 #weatherForecast {
     display: flex;
     gap: 10px;
+    justify-content: center;
 }
 
 h1 {
@@ -81,11 +94,40 @@ h1 {
 
 .card {
     min-width: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
 }
 
 
 form {
     display: flex;
     padding-top: 25px;
+}
+
+p {
+    color: #b1b1b1;
+}
+
+.card p:first-of-type {
+    color:#f0f0f0;
+}
+
+h2 {
+    color: #fcd862;
+}
+
+#load {
+    display: none;
+}
+
+#cityName {
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
+
+.selected {
+    color: #f0f0f0;
 }
 
